css/style.css
body {
  margin: 0;
  font-family: 'Lato', sans-serif;
  background: #fafafa;
}

a:hover {
  text-decoration: none;
}

header {
  background: rgba(0,0,0,0.9);
  position: fixed;
  width: 100%;
  padding: 10px 0;
  font-family: 'Lato', sans-serif;
  z-index: 10;
}

.header__title {
  font-size: 20px;
  display: inline-block;
  font-weight: bold;
}

.header__title a {
  text-decoration: none;
  color: #fff;
  transition: all 0.1s ease-in-out;
}

.header__title a:hover {
  text-decoration: none;
}

.header__btn {
  list-style: none;
  float: right;
  margin: 0;
}

.header__btn li {
  display: inline-block;
  text-transform: capitalize;
}

.header__btn li a {
  text-decoration: none;
  color: #aaa;
  padding: 10px;
  transition: all 0.2s ease-in-out;
}

.header__btn li a:hover {
  color: #fff;
}

.header__btn li a.active {
  color: #fff;
  border-top: 2px solid #fff;
}

.heading {
  font-size: 28px;
  text-align: center;
  padding: 45px 0 15px 0;
  color: #222;
}

footer {
  background: #222;
  padding: 20px;
  color: #eee;
  font-family: 'Lato', sans-serif;
  margin-top: 60px;
}


.icon {
  border-radius: 5px;
  transition: all 0.1s ease-in-out;
}

.icon-caption {
  text-align: center;
}

.jumbotron {
  padding: 10px 20px;
  margin: 0;
  background: none;
}


.filler {
  height: 500px
}

